[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lasap"
version = "0.0.1"
authors = [
#  { name="Hugo Lóio", email="author@example.com" },
  {name="Hugo Lóio"},
]
description = "A data container and post-processing python package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Hugo-loio/dapp"
